[project]
name = "tokens-cli"
version = "0.1.0"
description = "Unified terminal dashboard for token usage & limits across Claude Code, Cursor, and Codex"
requires-python = ">=3.10"
dependencies = [
    "rich>=14.0.0",
    "plotext>=5.3.2",
    "humanize>=4.0.0",
]

[project.scripts]
tokens = "tokens.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tokens"]

[dependency-groups]
dev = ["pytest>=8.0.0"]
